fixed several layout problems, few bugs, and critical redirecting error

--- a/src/styles/windcutter.css
+++ b/src/styles/windcutter.css
@@ -146,7 +146,6 @@ input.code {
 }
 
 .item-desc:is(.img):hover {
-
   text-decoration: dotted;
   text-decoration-line: underline;
 }
@@ -155,4 +154,45 @@ input.code {
   display: inline-block;
   width: 24px;
   height: 24px;
+}
+
+.item {
+  width: 24px;
+  height: 24px;
+  object-fit: none;
+}
+
+.expand-div {
+  padding: 0 2em;
+  visibility: collapse;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.expand-div:has(+ .expand-btn:checked) {
+  visibility: visible;
+  position: static;
+  opacity: 1;
+}
+
+.expand-btn {
+  appearance: none;
+  margin-block-start: auto;
+  margin-inline-start: auto;
+  padding-inline-end: .5em;
+}
+
+.expand-btn:is(:hover, :focus, :focus-within) {
+  opacity: .8;
+}
+
+.expand-btn::after {
+  content: 'Read more...';
+  font-family: inherit;
+  color: hsl(var(--text));
+}
+
+.expand-btn:checked::after {
+  content: 'Collapse';
 }
